another TODO for me

--- a/TODO
+++ b/TODO
@@ -99,7 +99,7 @@ GENERAL ROADMAP/ORDER OF THINGS:
 
 for release:
  - fix printing overlap
- 
+ - GetSingleChoiceIndex() in wxMDialogs height 
  - add new mail and group reply/followup buttons (and menu entry for
    the latter) to folderview
  - update docs: 0.23a
