1. added french translations for wxWin (not up-to-date) 2. run msgfmt with -v option - very helpful to find problems with the translations 3. added missing '\n' to de.po

--- a/locale/de.po
+++ b/locale/de.po
@@ -3333,7 +3333,7 @@ msgstr "Zeigt Programminformation und Lizenz an."
 
 #: wxFolderTree.cpp:405
 msgid "You cannot delete the '%s' folder.\n"
-msgstr "Kann den '%s' Eintrag nicht löschen."
+msgstr "Kann den '%s' Eintrag nicht löschen.\n"
 
 #: wxMFolderDialogs.cpp:677
 msgid "&Keep folder always open: "
