Polwarth III -> IV

--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -1,4 +1,4 @@
-#This file was created by <karsten> Thu Jun 24 10:34:30 1999
+#This file was created by <karsten> Thu Jun 24 11:17:50 1999
 #LyX 1.0 (C) 1995-1999 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass book
@@ -41,7 +41,7 @@ for Version 0.23a
 \begin_inset Quotes eld
 \end_inset 
 
-Polwarth III
+Polwarth IV
 \begin_inset Quotes erd
 \end_inset 
 
