--- a/TODO
+++ b/TODO
@@ -109,8 +109,8 @@ GENERAL ROADMAP/ORDER OF THINGS:
 *** KB:
 *********************************************************************
 
-for release:
- - GetSingleChoiceIndex() in wxMDialogs height 
+** started using/implementing ASMailFolder classes!
+
 - check handling of missing hostnames,
   suppress missing hostname c-client error message
 
